[gd_scene load_steps=4 format=3 uid="uid://c7gynwqu2m76k"]

[ext_resource type="Script" uid="uid://ds2rd6386oum4" path="res://Script/character_body_3d.gd" id="1_q6ses"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q6ses"]
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v3drd"]
height = 1.3

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_q6ses")

[node name="CS_Standup" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_q6ses")

[node name="CS_Crouch" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.650168, 0)
shape = SubResource("CapsuleShape3D_v3drd")
disabled = true

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="neck" type="Node3D" parent="head"]

[node name="eyes" type="Node3D" parent="head/neck"]

[node name="Camera3D" type="Camera3D" parent="head/neck/eyes"]

[node name="RC_UpCrouch" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="Timer_Slide" type="Timer" parent="."]
one_shot = true
